src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TE_Performed_RollUp__c</fullName>
        <label>TE Performed RollUp</label>
        <summarizedField>Training_Event__c.TE_Contract_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Event__c.Status__c</field>
            <operation>equals</operation>
            <value>Performed</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Event__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TE_count_dlrs__c</fullName>
        <label>TE count dlrs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tailoring_to_needs__c</fullName>
        <inlineHelpText>How can we most effectively tailor this program to fit your needs?</inlineHelpText>
        <label>Tailoring to needs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <inlineHelpText>Describe participant group</inlineHelpText>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation__c</fullName>
        <formula>IF(  
  Related_Tax_Rate__c &lt;&gt;0,
  ( Currency_Conversion__c * Related_Tax_Rate__c), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount times Related Tax Rate plus Amount, if Tax Rate has a value</inlineHelpText>
        <label>Tax Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Event_Price__c</fullName>
        <inlineHelpText>Rolling up from the Training Event for Performed Events</inlineHelpText>
        <label>Total Event Price</label>
        <summarizedField>Training_Event__c.Base_Event_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Training_Event__c.Status__c</field>
            <operation>equals</operation>
            <value>Performed</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Event__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Hours__c</fullName>
        <label>Total Number Hours</label>
        <summarizedField>OpportunityLineItem.Number_of_hours__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer_Requested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Requested trainer on Opportunity Record. Set on this record and copied to Training Event record.</inlineHelpText>
        <label>Trainer Requested</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Id</field>
                <operation>equals</operation>
                <value>01241000001E9XE</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings Assigned</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_detail__c</fullName>
        <formula>Account.Trainer_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingStartDate__c</fullName>
        <inlineHelpText>This date is the ideal date requested by the customer. Please put additional dates in the Alternative Dates/Times notes field provided.</inlineHelpText>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <formula>Product_Quantity__c  +  TrainingStartDate__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event_ID__c</fullName>
        <label>Training Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Address__c</fullName>
        <formula>Training_Location_Contact__r.MailingStreet &amp; &quot; - &quot; &amp; 
Training_Location_Contact__r.MailingCity &amp; &quot;, &quot; &amp; Training_Location_Contact__r.MailingState &amp; &quot; &quot; &amp; Training_Location_Contact__r.MailingPostalCode 
&amp; &quot; - &quot; &amp; Training_Location_Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_City__c</fullName>
        <label>Training Location Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Country__c</fullName>
        <label>Training Location Contact Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Name__c</fullName>
        <label>Training Location Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Postal_Code__c</fullName>
        <label>Training Location Contact Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_State__c</fullName>
        <label>Training Location Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Street__c</fullName>
        <label>Training Location Contact Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Location Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Training Location Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Location_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>REQUIRED FOR TRAINING PERFORMING IN: Australia, Canada, New Zealand, and the United Kingdom.</inlineHelpText>
        <label>Training Location Tax</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Currency_Detail__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator, Operations</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Currency_Detail__c</referenceTo>
        <relationshipLabel>Tax Detail (Opportunities)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_of_Days__c</fullName>
        <label>Training # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Notes__c</fullName>
        <label>Travel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Attendees_Per_Session__c</fullName>
        <label>Webinar Attendees Per Session</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Client_Provided_Roster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Client Provided Roster?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Conference_Line_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Conference Line Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Evaluation_Link__c</fullName>
        <label>Webinar Evaluation Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Hosting__c</fullName>
        <label>Webinar Hosting</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_International_Conference_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar International Conference Line?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Notes__c</fullName>
        <label>Webinar Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Platform__c</fullName>
        <label>Webinar Platform</label>
        <picklist>
            <picklistValues>
                <fullName>WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoToMeeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoToTraining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoToWebinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adobe Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype for Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Live Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Recording_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Recording Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Same_Attendees_per_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Same Attendees per Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Session_Times__c</fullName>
        <label>Webinar Session Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Time_Zone__c</fullName>
        <label>Webinar Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Scheduling_PreSales_Working</fullName>
        <columns>Trainer_Requested__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Pre_Sale_Trainer_Info__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>General_Session_Notes__c</columns>
        <columns>Contract_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>Pre_Sale_Trainer_Request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Scheduling - PreSales - Working</label>
        <sharedTo>
            <roleAndSubordinates>On_site_Exec</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Scheduling_PreSales_Working1</fullName>
        <columns>Trainer_Requested__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Decision_Maker__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Pre_Sale_Trainer_Info__c</columns>
        <columns>General_Session_Notes__c</columns>
        <columns>Contract_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <filters>
            <field>Pre_Sale_Trainer_Request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Scheduling - PreSales - Working</label>
        <sharedTo>
            <roleAndSubordinates>On_site_Exec</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>On_site_Custom</fullName>
        <active>true</active>
        <businessProcess>On-site Training</businessProcess>
        <description>Used for and Custom or Custom Lite sales</description>
        <label>On-site: Custom</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_site_License</fullName>
        <active>false</active>
        <businessProcess>On-site Training</businessProcess>
        <description>For any sales for Perpetual or other special Licensed material</description>
        <label>On-site: License</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_site_Locked</fullName>
        <active>true</active>
        <businessProcess>On-site Training</businessProcess>
        <label>On-site Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_site_Standard</fullName>
        <active>true</active>
        <businessProcess>On-site Training</businessProcess>
        <description>Used in most standard On-site deals</description>
        <label>On-site Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_site_Webinar</fullName>
        <active>false</active>
        <businessProcess>On-site Training</businessProcess>
        <description>For every Web-based training sold by On-site</description>
        <label>On-site: Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard</businessProcess>
        <label>Standard Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Lost_requirments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(StageName, &apos;Closed Lost&apos;), 
OR(ISNULL(Closed_Lost_Notes__c),ISPICKVAL(Closed_Lost_Reason__c, &apos;&apos;)), 
$Profile.Id=&apos;00e41000000Ga1m&apos;)</errorConditionFormula>
        <errorMessage>Closed Lost Reason and Close Lost Notes Must be completed for any close lost opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Billing_Currency</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon = true 
&amp;&amp; 
ISBLANK( Billing_Currency__c ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorDisplayField>Billing_Currency__c</errorDisplayField>
        <errorMessage>To win an opportunity, you must have a Billing Currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Decision_Maker</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon = true 
&amp;&amp; 
ISBLANK( Decision_Maker__c ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorDisplayField>Decision_Maker__c</errorDisplayField>
        <errorMessage>To win an opportunity, you must have a Decision Maker.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Fields_All</fullName>
        <active>false</active>
        <description>We need Max Attendees, Billing Currency, Account Industry, Decision Maker, and Billing Contact on all closed won opp types.</description>
        <errorConditionFormula>IsWon = true
&amp;&amp;
OR(
ISBLANK( Max_Attendees__c ),
ISBLANK( Billing_Currency__c ),
ISPICKVAL( Account.Industry, &quot;&quot; ),
ISBLANK( Billing_Contact__c ),
ISBLANK( Decision_Maker__c )
)
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ )
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>Max Attendees, Billing Currency, Account Industry, Decision Maker, and Billing Contact are all required to have a closed won opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Fields_All_Not_OS_License</fullName>
        <active>false</active>
        <description>We need Training Start Date, Start Time and End Time on all Record Types except On-Site License.</description>
        <errorConditionFormula>IsWon = true
&amp;&amp;
NOT(RecordType.DeveloperName = &quot;On_site_License&quot;)
&amp;&amp;
OR(
ISBLANK( TrainingStartDate__c ),
ISPICKVAL( Start_Time__c, &quot;&quot; ),
ISPICKVAL( End_Time__c, &quot;&quot; )
)
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ )
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>Training Start Date, Start Time, and End Time are all required to have a closed won opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Fields_OS_Standard</fullName>
        <active>false</active>
        <description>We need Shipping Contact and Training Location Contact for On-Site Standard.</description>
        <errorConditionFormula>IsWon = true
&amp;&amp;
RecordType.DeveloperName = &quot;On_site_Standard&quot;
&amp;&amp;
OR(
ISBLANK( Shipping_Contact__c ),
ISBLANK( Training_Location_Contact__c )
)
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ )
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>Shipping Contact and Training Location Contact are required to have a closed won opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Fields_OS_Webinar</fullName>
        <active>false</active>
        <description>We need these Webinar Fields for On-Site Webinar.

ISBLANK( Webinar_Attendees_Per_Session__c ), 
ISPICKVAL( Webinar_Hosting__c, &quot;&quot; ), 
ISPICKVAL( Webinar_Platform__c, &quot;&quot; ), 
ISBLANK( Webinar_Session_Times__c ), 
ISPICKVAL( Webinar_Time_Zone__c, &quot;&quot; )</description>
        <errorConditionFormula>IsWon = true
&amp;&amp; 
RecordType.DeveloperName = &quot;On_site_Webinar&quot;
&amp;&amp;
OR(
ISBLANK( Webinar_Attendees_Per_Session__c ), 
ISPICKVAL( Webinar_Hosting__c, &quot;&quot; ), 
ISPICKVAL( Webinar_Platform__c, &quot;&quot; ), 
ISBLANK( Webinar_Session_Times__c ), 
ISPICKVAL( Webinar_Time_Zone__c, &quot;&quot; )
)
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ )
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>Webinar Attendees Per Session, Webinar Hosting, Webinar Platform, Webinar Session Times, and Webinar Time Zone are all required to have a closed won opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Max_Attendees</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon = true 
&amp;&amp; 
Max_Attendees__c = 0
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorDisplayField>Max_Attendees__c</errorDisplayField>
        <errorMessage>To win an opportunity, you must have at least one Attendee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Number_of_Opp_Products</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon = true 
&amp;&amp; 
Number_of_Opp_Products__c = 0
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>To win an opportunity, you must have at least one Product selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Requirements_NEW</fullName>
        <active>false</active>
        <description>2015-08-21 RM: created based on email conversation about consolidating validation rules to permit winning an opp.</description>
        <errorConditionFormula>IsWon = true 
&amp;&amp;
OR(
ISBLANK( Decision_Maker__c ),
ISBLANK( Billing_Currency__c ), 
ISBLANK( Training_Location_Tax__c ),
Max_Attendees__c = 0, 
Number_of_Opp_Products__c = 0 
)

/* REMOVED FOR PRODUCT SELECTOR
ISBLANK( Training_of_Days__c ),
Number_of_Opp_Products__c = 0,
Amount = 0

*/


&amp;&amp; 
NOT( $User.ProfileId = &quot;00e41000001HG59&quot; /*System Admin profile*/ ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00e41000000Ga1k&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>To win an opportunity, you must have a Decision Maker, Max # Attendees, Billing Currency, Training Location Tax and at least one Product selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Training_Location_Tax</fullName>
        <active>true</active>
        <errorConditionFormula>IsWon = true 
&amp;&amp; 
ISBLANK( Training_Location_Tax__c )
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ ) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorDisplayField>Training_Location_Tax__c</errorDisplayField>
        <errorMessage>To win an opportunity, you must have a Training Location Tax.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_Content_Must_Be_on_Custom_Opp</fullName>
        <active>false</active>
        <errorConditionFormula>IsWon = TRUE
&amp;&amp;
Number_of_Custom_Content_Items__c = 0
&amp;&amp;
RecordTypeId = &quot;012G0000001QN3Y&quot; /* Custom Opportunity Record Type */
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000001GB2Q&quot; /*System Admin profile*/ )
&amp;&amp;
NOT( $User.ProfileId = &quot;00eG0000000S5pj&quot; /*Operations profile*/)</errorConditionFormula>
        <errorMessage>Please enter a custom content item for this Opportunity. A Custom Record Type cannot be Closed without a Custom Content Item record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Onsite_Opportunity</fullName>
        <active>false</active>
        <description>Once the Opp is converted, prevent the user from editing the record.</description>
        <errorConditionFormula>PRIORVALUE(IsWon) 
&amp;&amp; 
(IsWon || NOT(IsWon)) 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00e41000001HG59&quot;) /*System Administrator*/ 
&amp;&amp; 
NOT( $User.ProfileId = &quot;00e41000000Ga1k&quot; /*Operations profile*/) 
&amp;&amp; 
NOT(ISCHANGED(Number_of_TE_Days_Created__c)) 
&amp;&amp; 
NOT(RecordType.Name=&quot;On-site Unlocked&quot;) 
&amp;&amp; 
NOT(ISCHANGED(TE_count_dlrs__c))</errorConditionFormula>
        <errorMessage>Only System Administrators &amp; Operations can make changes to Locked Opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_site_Won_deals_require_detailed_info</fullName>
        <active>false</active>
        <description>Must have Account Industry, Billing Address info, Opportunity Contact Details, Training Start Date, Times, and Max Attendees, Ship and Location Info.</description>
        <errorConditionFormula>((RecordType.DeveloperName = &quot;On_site_Standard&quot; ||
RecordType.DeveloperName = &quot;On_site_Custom&quot; ) &amp;&amp; IsWon = TRUE &amp;&amp;
OR(
ISPICKVAL( Account.Industry,&quot;&quot; ),
ISBLANK( Account.BillingAddress ),
ISBLANK( Account.BillingCity ),
ISBLANK( Account.BillingState),
ISBLANK( Account.BillingPostalCode ),
ISBLANK( Billing_Contact__c ),
ISBLANK( Decision_Maker__c ),
ISBLANK( Shipping_Contact__c ),
ISBLANK( Shipping_Attention_Line__c ),
ISBLANK( Training_Location_Contact__c ),
ISBLANK( Max_Attendees__c ) ,
ISBLANK( TrainingStartDate__c ),
ISPICKVAL( Start_Time__c, &quot;&quot; ),
ISPICKVAL( End_Time__c, &quot;&quot; ),
ISBLANK( Billing_Currency__c )
))

||

(RecordType.DeveloperName = &quot;On_site_Webinar&quot;
&amp;&amp; IsWon = TRUE &amp;&amp;
OR(
ISPICKVAL( Account.Industry,&quot;&quot; ),
ISBLANK( Account.BillingAddress ),
ISBLANK( Account.BillingCity ),
ISBLANK( Account.BillingState),
ISBLANK( Account.BillingPostalCode ),
ISBLANK( Billing_Contact__c ),
ISBLANK( Decision_Maker__c ),
ISBLANK( Max_Attendees__c ) ,
ISBLANK( TrainingStartDate__c ),
ISPICKVAL( Start_Time__c, &quot;&quot; ),
ISPICKVAL( End_Time__c, &quot;&quot; ),
ISBLANK( Billing_Currency__c ),
ISBLANK( Webinar_Attendees_Per_Session__c ),
ISPICKVAL( Webinar_Hosting__c, &quot;&quot; ),
ISPICKVAL( Webinar_Platform__c, &quot;&quot; ),
ISBLANK( Webinar_Session_Times__c ),
ISPICKVAL( Webinar_Time_Zone__c, &quot;&quot; )
))

||

(RecordType.DeveloperName = &quot;On_site_License&quot; &amp;&amp; IsWon = TRUE &amp;&amp;
OR(
ISPICKVAL( Account.Industry,&quot;&quot; ),
ISBLANK( Account.BillingAddress ),
ISBLANK( Account.BillingCity ),
ISBLANK( Account.BillingState),
ISBLANK( Account.BillingPostalCode ),
ISBLANK( Billing_Contact__c ),
ISBLANK( Decision_Maker__c ),
ISBLANK( Shipping_Contact__c ),
ISBLANK( Training_Location_Contact__c ),
ISBLANK( Max_Attendees__c ),
ISBLANK( Billing_Currency__c )
))</errorConditionFormula>
        <errorMessage>REQUIRED: ACCOUNT Industry &amp; Billing Address, ALL OPPORTUNITIES - DM, Billing Contact, Max # Attendees, ILT - Shipping Contact, Training Contact, ATTN line, Training Start Date &amp; Times, WEBINARS - Host and Platform fields.</errorMessage>
    </validationRules>
</CustomObject>